--- a/people.html
+++ b/people.html
@@ -8,27 +8,142 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
-    <div class="card text-center">
-        <div class="card-header">
-          People
-        </div>
-        <div class="card-body ">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <div class="mx-auto" style="width: 80%;">
+    <form>
+      <div class="card text-center row g-3">
+        <h2 class="card-header col-md-12">People</h2>
+        <div class="row g-3 col-md-12">
+          
+          <div class= "col-md-6">
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
             </div>
-            <div class="input-group mb-3 ">
-                <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
             </div>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div>
+              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+            </div>
+            <br>
+            <div class="col-md-12">
+              <div>
+                <label for="subject">Subject</label>
+              </div>
+              <div>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px; width: 200px;"></textarea>
+              </div>
+            </div>
+          </div>
+
+          <div class= "col-md-6">
+            <label class="form-check-label col-md-2" for="flexSwitchCheckDefault">Gang</label>
+            <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+            <label class="form-check-label col-md-2" for="flexSwitchCheckDefault">Hazard</label>
+            <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+            <div>
+              <label class="form-check-label col-md-2" for="flexSwitchCheckDefault">Code</label>
+              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
+            </div>
+          </div>
+
         </div>
       </div>
+    </form>  
+  </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 </body>
 </html>
