--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RMS</title>
-    <link href="index.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet" type="text/css">
     
 </head>
 <body>
     <div class="loginbox">
-        <img src="" alt="Logo" class="logo">
+        <img src="images/Law Public Safety_orange.png" class="logo">
         <h1>Login here</h1>
         <form>
             <p>Username</p>
