--- a/vehicle.html
+++ b/vehicle.html
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
@@ -70,49 +70,49 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
+                                    <td><input type="text"></td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="text" class="bg-transparent"></td>
                                 </tr>
                                 
                                 </tbody>
@@ -129,7 +129,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td></td>
+                                            <td><input type="text" class="bg-transparent"></td>
                                         </tr>
                                     </tbody>
                         </table>
