Fixed People File

--- a/people.html
+++ b/people.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,101 +45,249 @@
     </div>
   </nav>
 
+  <br>
+
   <div class="mx-auto" style="width: 80%;">
-    <form>
-      <div class="card text-center row g-3">
-        <h2 class="card-header col-md-12">People</h2>
-        <div class="row g-3 col-md-12">
-          
-          <div class= "col-md-6">
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div>
-              <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
-              <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <br>
-            <div class="col-md-12">
-              <div>
-                <label for="subject">Subject</label>
-              </div>
-              <div>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px; width: 200px;"></textarea>
-              </div>
-            </div>
+    <div class="card text-center">
+      <h2 class="card-header mx-auto" style="width: 100%;">People</h2>
+
+      <div class="row g-2 m-3">
+        <div class="col-md me-3">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Name(First and Last)</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
 
-          <div class= "col-md-6">
-            <label class="form-check-label col-md-2" for="flexSwitchCheckDefault">Gang</label>
-            <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-            <label class="form-check-label col-md-2" for="flexSwitchCheckDefault">Hazard</label>
-            <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-            <div>
-              <label class="form-check-label col-md-2" for="flexSwitchCheckDefault">Code</label>
-              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-              <input class="form-check-input col-md-3" type="checkbox" id="flexSwitchCheckDefault">
-            </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Social Security Number</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Age</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Date of Birth</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Phone Number</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Home Address</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Weight</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Height</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">Eye Color</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+
+          <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">Race</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+
+          <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">Hair Color</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+
+          <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">Gender</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>Unkown</option>
+              <option value="1">Male</option>
+              <option value="2">Female</option>
+            </select>
+          </div>
+
+          <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+            <label for="floatingTextarea">Comments</label>
+          </div>
+        </div>
+
+        <div class="col-md ms-3">
+          <div class="row g-2">
+
+            <div class="col-md">
+              <label for="formGroupExampleInput" class="form-label">Code</label>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  RP
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  W
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  V
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  IL
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  S
+                </label>
+              </div>
+            </div>
+
+            <div class="col-md">
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Gang affiliation</label>
+              </div>
+
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+              </div>
+              <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <label for="floatingTextarea2">Comments</label>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">Options</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+
+          <table class="table table-striped table-hover border border-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Registered Vehicles</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                </tr>
+                <tr>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                </tr>
+                <tr>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                </tr>
+                <tr>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                </tr>
+              </tbody>
+            </table>
+
+            <table class="table table-striped table-hover border border-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Registered Vehicles</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                </tr>
+                <tr>
+                  <th scope="row">1</th>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                </tr>
+              </tbody>
+            </table>
+
+            <table class="table table-striped table-hover border border-dark">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                </tr>
+              </tbody>
+            </table>
 
         </div>
+
       </div>
-    </form>  
+    </div>
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
@@ -147,3 +295,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+<!--<div>
+    <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+    <input class="col-md-7" type="email" class="form-control" id="inputEmail4">
+  </div>
+  <br>
+  <label class="col-md-2" for="inputEmail4" class="form-label">Email</label>
+    <select class="form-select col-md-3 mx-auto" style="width: 73%;" aria-label="select example">
+      <option selected>Open this select menu</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+  <br>
