--- a/people.html
+++ b/people.html
@@ -132,10 +132,16 @@
             </select>
           </div>
 
-          <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+          <div class="form-floating mb-3">
+            <textarea class="form-control overflow-auto" placeholder="Leave a comment here" id="floatingTextarea" style="height: 300px; min-height: 300px; max-height: 300px;"></textarea>
             <label for="floatingTextarea">Comments</label>
           </div>
+
+          <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupFile01">Upload</label>
+            <input type="file" class="form-control" id="inputGroupFile01">
+          </div>
+
         </div>
 
         <div class="col-md ms-3">
@@ -183,15 +189,16 @@
 
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+                <label class="form-check-label" for="flexSwitchCheckDefault">Hazard</label>
               </div>
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <textarea class="form-control overflow-auto" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 150px; min-height: 150px; max-height: 150px;"></textarea>
                 <label for="floatingTextarea2">Comments</label>
               </div>
             </div>
-
           </div>
+
+          <br>
 
           <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
@@ -212,6 +219,8 @@
               <option value="3">Three</option>
             </select>
           </div>
+
+          <br>
 
           <table class="table table-striped table-hover border border-dark">
               <thead>
@@ -238,22 +247,22 @@
             <table class="table table-striped table-hover border border-dark">
               <thead>
                 <tr>
-                  <th scope="col">Registered Vehicles</th>
+                  <th scope="col">Previous Vehicles</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                </tr>
-                <tr>
-                  <th scope="row">1</th>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                </tr>
+                  <tr>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                    </tr>
+                    <tr>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                    </tr>
+                    <tr>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                    </tr>
+                    <tr>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                    </tr>
               </tbody>
             </table>
 
@@ -281,18 +290,45 @@
                   <td>Jacob</td>
                   <td>Thornton</td>
                 </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                  </tr>
               </tbody>
             </table>
 
         </div>
-
+        <div class="row g-2 mb-2 ml-2">
+          <div>
+            <button class="btn btn-primary btn-lg col-md ms-3 mx-3" type="submit" >Button</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
+  
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+
 </body>
 </html>
 
