started incident form

--- a/vehicle.html
+++ b/vehicle.html
@@ -52,18 +52,18 @@
         <div class="card-body">
             <div class="row">
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">License Plate Number</span>
-                    <input type="text" class="form-control" aria-label="Username" id="plate" aria-describedby="basic-addon1"></div></div>
+                    <input type="text" class="form-control" aria-label="plate" id="plate" aria-describedby="basic-addon1"></div></div>
                 <!-- <div class="col"><p><label>License Plate Number</label><input type="text" id="plate" style="margin-left: 3%;"></p></div> -->
                 <!-- <div class="col"><p><label>Year</label><input type="text" id="year"></p></div> -->
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Year</span>
-                    <input type="text" class="form-control" aria-label="Username" id="year" aria-describedby="basic-addon1"></div></div>
+                    <input type="text" class="form-control" aria-label="year" id="year" aria-describedby="basic-addon1"></div></div>
             </div>
             <div class="row">
                     <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Vehicle Id Number</span>
-                        <input type="text" class="form-control" aria-label="Username" id="VIN" aria-describedby="basic-addon1"></div></div>
+                        <input type="text" class="form-control" aria-label="VIN" id="VIN" aria-describedby="basic-addon1"></div></div>
 
                     <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Make</span>
-                        <input type="text" class="form-control" aria-label="Username" id="Make" aria-describedby="basic-addon1"></div></div>
+                        <input type="text" class="form-control" aria-label="Make" id="Make" aria-describedby="basic-addon1"></div></div>
             </div>
             <div class="row">
                 <div class="col">
@@ -163,13 +163,13 @@
                     </table>
                 </div>
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Model</span>
-                    <input type="text" class="form-control" aria-label="Username" id="model" aria-describedby="basic-addon1"></div>
+                    <input type="text" class="form-control" aria-label="model" id="model" aria-describedby="basic-addon1"></div>
 
                 <div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Color</span>
-                        <input type="text" class="form-control" aria-label="Username" id="color" aria-describedby="basic-addon1"></div>
+                        <input type="text" class="form-control" aria-label="color" id="color" aria-describedby="basic-addon1"></div>
                     
                     <div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Value</span>
-                        <input type="text" class="form-control" aria-label="Username" id="value" aria-describedby="basic-addon1"></div>
+                        <input type="text" class="form-control" aria-label="value" id="value" aria-describedby="basic-addon1"></div>
                         
                     <table class="table table-striped table-hover">
                             <thead>
