--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="loginbox">
-        <img src="images/Law Public Safety_orange.png" class="logo">
+        <img src="public/images/Public Safety_orange.png" class="logo">
         <h1>Login here</h1>
         <form>
             <p>Username</p>
