--- a/incident.html
+++ b/incident.html
@@ -82,7 +82,7 @@
             </div>
             <div class="row">
                     <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Occurence Date</span>
-                        <input type="text" class="form-control" aria-label="Occurence date" id="Occdate" aria-describedby="basic-addon1"></div></div>
+                        <input type="date" class="form-control" aria-label="Occurence date" id="Occdate" aria-describedby="basic-addon1"></div></div>
 
                     <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Location</span>
                         <input type="text" class="form-control" aria-label="Location" id="Location" aria-describedby="basic-addon1"></div></div>
@@ -98,16 +98,61 @@
 
             <div class="row">
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Social Security Number</span>
-                    <input type="text" class="form-control" aria-label="Social Security" id="ssn" aria-describedby="basic-addon1"></div></div>
+                    <input type="text" placeholder="XXX-XX-XXXX" class="form-control" aria-label="Social Security" id="ssn" aria-describedby="basic-addon1"></div></div>
 
                 <div class="col"><div class="input-group mb-3"><label class="input-group-text" for="inputGroupSelect01">License State</label>
                     <select class="form-select" id="inputGroupSelect01">
-                      <option selected>UNK</option>
-                      <option value="1">BRO</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
+                      <option selected>Select</option>
+                      <option value="1">AL</option>
+                      <option value="2">AK</option>
+                      <option value="3">AZ</option>
+                      <option value="4">AR</option>
+                      <option value="5">CA</option>
+                      <option value="6">CO</option>
+                      <option value="7">CT</option>
+                      <option value="8">DE</option>
+                      <option value="9">FL</option>
+                      <option value="10">GA</option>
+                      <option value="11">HI</option>
+                      <option value="12">ID</option>
+                      <option value="13">IL</option>
+                      <option value="14">IN</option>
+                      <option value="15">IA</option>
+                      <option value="16">KS</option>
+                      <option value="17">KY</option>
+                      <option value="18">LA</option>
+                      <option value="19">ME</option>
+                      <option value="20">MD</option>
+                      <option value="21">MA</option>
+                      <option value="22">MI</option>
+                      <option value="23">MN</option>
+                      <option value="24">MS</option>
+                      <option value="25">MO</option>
+                      <option value="26">MT</option>
+                      <option value="27">NE</option>
+                      <option value="28">NV</option>
+                      <option value="29">NH</option>
+                      <option value="30">NJ</option>
+                      <option value="31">NM</option>
+                      <option value="32">NY</option>
+                      <option value="33">NC</option>
+                      <option value="34">ND</option>
+                      <option value="35">OH</option>
+                      <option value="36">OK</option>
+                      <option value="37">OR</option>
+                      <option value="38">PA</option>
+                      <option value="39">RI</option>
+                      <option value="40">SC</option>
+                      <option value="41">SD</option>
+                      <option value="42">TN</option>
+                      <option value="43">TX</option>
+                      <option value="44">UT</option>
+                      <option value="45">VT</option>
+                      <option value="46">VA</option>
+                      <option value="47">WA</option>
+                      <option value="48">WV</option>
+                      <option value="49">WI</option>
+                      <option value="50">WY</option>
                     </select></div></div>
             </div>
 
@@ -128,51 +173,51 @@
                       <option value="3">AZ</option>
                       <option value="4">AR</option>
                       <option value="5">CA</option>
-                      <option value="1">CO</option>
-                      <option value="2">CT</option>
-                      <option value="3">DE</option>
-                      <option value="4">FL</option>
-                      <option value="5">GA</option>
-                      <option value="1">HI</option>
-                      <option value="2">ID</option>
-                      <option value="3">IL</option>
-                      <option value="4">IN</option>
-                      <option value="5">IA</option>
-                      <option value="1">KS</option>
-                      <option value="2">KY</option>
-                      <option value="3">LA</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
-                      <option value="1">AL</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
-                      <option value="1">AL</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
-                      <option value="1">AL</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
-                      <option value="1">AL</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
-                      <option value="1">AL</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
-                      <option value="1">AL</option>
-                      <option value="2">GRN</option>
-                      <option value="3">BLU</option>
-                      <option value="4">DBL</option>
-                      <option value="5">LBL</option>
+                      <option value="6">CO</option>
+                      <option value="7">CT</option>
+                      <option value="8">DE</option>
+                      <option value="9">FL</option>
+                      <option value="10">GA</option>
+                      <option value="11">HI</option>
+                      <option value="12">ID</option>
+                      <option value="13">IL</option>
+                      <option value="14">IN</option>
+                      <option value="15">IA</option>
+                      <option value="16">KS</option>
+                      <option value="17">KY</option>
+                      <option value="18">LA</option>
+                      <option value="19">ME</option>
+                      <option value="20">MD</option>
+                      <option value="21">MA</option>
+                      <option value="22">MI</option>
+                      <option value="23">MN</option>
+                      <option value="24">MS</option>
+                      <option value="25">MO</option>
+                      <option value="26">MT</option>
+                      <option value="27">NE</option>
+                      <option value="28">NV</option>
+                      <option value="29">NH</option>
+                      <option value="30">NJ</option>
+                      <option value="31">NM</option>
+                      <option value="32">NY</option>
+                      <option value="33">NC</option>
+                      <option value="34">ND</option>
+                      <option value="35">OH</option>
+                      <option value="36">OK</option>
+                      <option value="37">OR</option>
+                      <option value="38">PA</option>
+                      <option value="39">RI</option>
+                      <option value="40">SC</option>
+                      <option value="41">SD</option>
+                      <option value="42">TN</option>
+                      <option value="43">TX</option>
+                      <option value="44">UT</option>
+                      <option value="45">VT</option>
+                      <option value="46">VA</option>
+                      <option value="47">WA</option>
+                      <option value="48">WV</option>
+                      <option value="49">WI</option>
+                      <option value="50">WY</option>
                       
                     </select></div></div>
 
@@ -201,7 +246,7 @@
                     <input type="text" class="form-control" aria-label="Supp. INT. & Serial #" id="Supp&serial" aria-describedby="basic-addon1"></div></div>
 
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Date</span>
-                    <input type="text" class="form-control" aria-label="Date" id="date" aria-describedby="basic-addon1"></div></div>
+                    <input type="date" class="form-control" aria-label="Date" id="date" aria-describedby="basic-addon1"></div></div>
             </div>
                     <div class="row g-2">
                             <div class="col-md">
