--- a/people.html
+++ b/people.html
@@ -17,13 +17,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="incident.html">Incident</a>
+            <a class="nav-link active" aria-current="page" href="incidentlist.html">Incident</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="people.html">People</a>
+            <a class="nav-link active" aria-current="page" href="peoplelist.html">People</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="vehicle.html">Vehicle</a>
+            <a class="nav-link active" aria-current="page" href="vehiclelist.html">Vehicle</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="select.html">Select</a>
