Trying to learn how Schema works

--- a/people.html
+++ b/people.html
@@ -333,7 +333,7 @@
         </div>
         <div class="row g-2 mb-2 ml-2">
           <div>
-            <button class="btn btn-primary btn-lg col-md ms-3 mx-3" type="submit" >Submit</button>
+            <button class="btn btn-primary btn-lg col-md ms-3 mx-3" type="submit" style="background-color: #F7931D;">Submit</button>
           </div>
         </div>
       </div>
