--- a/incident.html
+++ b/incident.html
@@ -298,7 +298,10 @@
                 </div></div>
             </div>
             <div class="row">
-            <a href="#" class="btn btn-primary">Submit</a>
+              <div>
+                <a href="#" class="btn btn-primary">Submit</a>
+              </div>
+           
             </div>
           
         </div>
