--- a/incidentlist.html
+++ b/incidentlist.html
@@ -42,9 +42,10 @@
         <div class="card-header" >
           <h1 style="text-align: center;">List of Incidents</h1>
         </div>
-            </div>
             <div class="row">
+              <div>
                 <a href="incident.html" class="btn btn-primary">Create a new incident</a>
+              </div>
             </div>
           
         </div>
