--- a/peoplelist.html
+++ b/peoplelist.html
@@ -42,9 +42,10 @@
         <div class="card-header" >
           <h1 style="text-align: center;">List of People</h1>
         </div>
-            </div>
             <div class="row">
+              <div>
                 <a href="people.html" class="btn btn-primary">Add people</a>
+              </div>
             </div>
           
         </div>
