--- a/vehicle.html
+++ b/vehicle.html
@@ -218,7 +218,9 @@
                 </div></div>
             </div>
             <div class="row">
-            <a href="#" class="btn btn-primary">Submit</a>
+                <div>
+                    <a href="#" class="btn btn-primary">Submit</a>
+                </div>
             </div>
           
         </div>
