--- a/incidentlist.html
+++ b/incidentlist.html
@@ -44,7 +44,7 @@
         </div>
             <div class="row">
               <div>
-                <a href="incident.html" class="btn btn-primary">Create a new incident</a>
+                <a href="incident.html" class="btn btn-primary" style="background-color: #F7931D;">Create a new incident</a>
               </div>
             </div>
           
