--- a/peoplelist.html
+++ b/peoplelist.html
@@ -44,7 +44,7 @@
         </div>
             <div class="row">
               <div>
-                <a href="people.html" class="btn btn-primary">Add people</a>
+                <a href="people.html" class="btn btn-primary" style="background-color: #F7931D;">Add people</a>
               </div>
             </div>
           
