--- a/vehicle.html
+++ b/vehicle.html
@@ -219,7 +219,7 @@
             </div>
             <div class="row">
                 <div>
-                    <a href="#" class="btn btn-primary">Submit</a>
+                    <a href="#" class="btn btn-primary" style="background-color: #F7931D;">Submit</a>
                 </div>
             </div>
           
