--- a/vehiclelist.html
+++ b/vehiclelist.html
@@ -44,7 +44,7 @@
         </div>
         <div class="row">
           <div>
-             <a href="vehicle.html" class="btn btn-primary">Add a new Vehicle</a>
+             <a href="vehicle.html" class="btn btn-primary" style="background-color: #F7931D;">Add a new Vehicle</a>
           </div>
            
         </div>
