did more on the incident

--- a/html/incident.html
+++ b/html/incident.html
@@ -425,10 +425,52 @@
                               </div>
                             </div>
                     </div>
-            
-                <div class="row"><div class="col-25"><label for="Narriative">Narriative</label></div>
-                <div class="col-75"><textarea id="addinfo" name="Narriative" placeholder="Write information..." style="height: 200px; width: 1000px; max-block-size: 200px; min-height: 200px;"></textarea></div>
-                </div></div>
+            <!--This shows all the vehicles that are involved in the incident-->
+                <div class="row">
+                  <div class="col">
+                      <table class="table table-striped table-hover">
+                          <thead>
+                              <tr>
+                                  <th scope="col">Vehicles Involved</th>
+                              </tr>
+                          </thead>
+                          <tbody>
+                              <tr>
+                                  <td><input type="text" class="bg-transparent"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text" class="bg-transparent"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text" class="bg-transparent"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text" class="bg-transparent"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text"></td>
+                              </tr>
+                              <tr>
+                                  <td><input type="text" class="bg-transparent"></td>
+                              </tr>
+                          </tbody>
+                      </table>
+                  </div>
+                  <div class="col">
+                    <div class="col-25"><label for="Narriative">Narriative</label></div>
+                    <div class="col-75"><textarea id="addinfo" name="Narriative" placeholder="Write information..." style="height: 440px; width: 550px; min-height: 200px; max-height: 440px;"></textarea></div>
+                  </div>
+                  
+                </div>
 
               <div class="row">
                 <div>
