added fields for vehicles controller

--- a/html/vehicle.html
+++ b/html/vehicle.html
@@ -71,47 +71,47 @@
                                 <tr>
                                     <td><input type="text" class="bg-transparent"></td>
                                     <td><input type="text" class="bg-transparent"></td>
-                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="date" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text"></td>
                                     <td><input type="text"></td>
-                                    <td><input type="text"></td>
+                                    <td><input type="date"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text" class="bg-transparent"></td>
                                     <td><input type="text" class="bg-transparent"></td>
-                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="date" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text"></td>
                                     <td><input type="text"></td>
-                                    <td><input type="text"></td>
+                                    <td><input type="date"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text" class="bg-transparent"></td>
                                     <td><input type="text" class="bg-transparent"></td>
-                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="date" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text"></td>
                                     <td><input type="text"></td>
-                                    <td><input type="text"></td>
+                                    <td><input type="date"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text" class="bg-transparent"></td>
                                     <td><input type="text" class="bg-transparent"></td>
-                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="date" class="bg-transparent"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text"></td>
                                     <td><input type="text"></td>
-                                    <td><input type="text"></td>
+                                    <td><input type="date"></td>
                                 </tr>
                                 <tr>
                                     <td><input type="text" class="bg-transparent"></td>
                                     <td><input type="text" class="bg-transparent"></td>
-                                    <td><input type="text" class="bg-transparent"></td>
+                                    <td><input type="date" class="bg-transparent"></td>
                                 </tr>
                                 
                                 </tbody>
