--- a/html/vehicle.html
+++ b/html/vehicle.html
@@ -41,6 +41,7 @@
         <div class="card-header" >
           <h1 style="text-align: center;">Vehicles</h1>
         </div>
+        <!--Creates the body of the form-->
         <div class="card-body">
             <div class="row">
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">License Plate Number</span>
@@ -59,6 +60,7 @@
             </div>
             <div class="row">
                 <div class="col">
+                    <!--is a table of incident, type, and date-->
                     <table class="table table-striped table-hover">
                         <thead>
                                 <tr>
@@ -116,7 +118,7 @@
                                 
                                 </tbody>
                     </table>
-
+                    <!--a text box for additional information to go-->
                     <div class="col">
                             <label for="addinfo">Additional information</label>
                             <textarea id="addinfo" name="addinfo" placeholder="Write additional information..." style="height: 200px; width: 500px; max-block-size: 200px; min-height: 200px;"></textarea>
@@ -125,6 +127,7 @@
                 <div class="col"><div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Model</span>
                     <input type="text" class="form-control" aria-label="model" id="model" aria-describedby="basic-addon1"></div>
 
+                    <!--dropdown menu of all the color codes-->
                 <div class="input-group mb-3">
                     <label class="input-group-text" for="inputGroupSelect01">Color</label>
                     <select class="form-select" id="inputGroupSelect01">
@@ -159,6 +162,7 @@
                     <div class="input-group mb-3"><span class="input-group-text" id="basic-addon1">Value</span>
                         <input type="text" class="form-control" aria-label="value" id="value" aria-describedby="basic-addon1"></div>
                         
+                        <!--a text box to put down who the registered owner of the car is-->
                     <table class="table table-striped table-hover">
                             <thead>
                                     <tr>
